--- a/indexDS.html
+++ b/indexDS.html
@@ -53,5 +53,45 @@
 			}
 		</style>
 	</head>
-	<body></body>
+	<body>		<div class="container">
+		<nav class="Menu-bar">
+			<ul>
+				<li>
+					<a
+						href="indexHOME.html"
+						target="_blank"
+						>Home</a
+					>
+				</li>
+				<li>
+					<a
+						href="indexDS.html"
+						target="_blank"
+						>Design</a
+					>
+				</li>
+				<li>
+					<a
+						href="indexWP.html"
+						target="_blank"
+						>Web Programming</a
+					>
+				</li>
+				<li>
+					<a
+						href="indexCNK.html"
+						target="_blank"
+						>Computer Network</a
+					>
+				</li>
+				<li>
+					<a
+						href="indexDS.html"
+						target="_blank"
+						>DataBase System</a
+					>
+				</li>
+			</ul>
+		</nav>
+	</div></body>
 </html>
