--- a/Font/about.html
+++ b/Font/about.html
@@ -6,6 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ABOUT</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        @font-face {
+            font-family: remuz;
+
+            src: url(RamusRegular-VGw8w.ttf);
+        }
+
+        @font-face {
+            font-family: medin;
+
+            src: url(groupemedium-8mxgn.otf);
+        }
+
+        @font-face {
+            font-family: kizerd;
+
+            src: url(kizard.otf);
+        }
+
+        @font-face {
+            font-family: ream;
+
+            src: url(AKbalthom\ Ream\ Regular.ttf);
+        }
+
+        @font-face {
+            font-family: Surin;
+
+            src: url(Khmer\ Pen-Surin\ Regular.ttf);
+        }
+
+        @font-face {
+            font-family: besdong;
+
+            src: url(KonKhmer_BesDong_V2.ttf);
+        }
+    </style>
 </head>
 <body>
     <div class="dec">
