--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			</nav>
 		</div>
 		<div class="About">
-			<span><a href="Font/about.html" target="_blank">About us</a></span>
+			<span><a href="about.html" target="_blank">About us</a></span>
 		</div>
 	</body>
 </html>
