--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 		<title>ABOUT</title>
 		<link
 			rel="stylesheet"
-			href="Font/AboutStyle.css"
+			href="AboutStyle.css"
 		/>
 		<style>
 			@font-face {
@@ -67,32 +67,28 @@
 					<li>
 						<a
 							class="b_ef"
-							href="indexDS.html"
-							target="_blank"
+							href="design.html"
 							>Design</a
 						>
 					</li>
 					<li>
 						<a
 							class="b_ef"
-							href="indexWP.html"
-							target="_blank"
+							href="webprogram.html"
 							>Web Programming</a
 						>
 					</li>
 					<li>
 						<a
 							class="b_ef"
-							href="indexCNK.html"
-							target="_blank"
+							href="network.html"
 							>Computer Network</a
 						>
 					</li>
 					<li>
 						<a
 							class="b_ef"
-							href="indexDS.html"
-							target="_blank"
+							href="database.html"
 							>DataBase System</a
 						>
 					</li>
@@ -235,6 +231,7 @@
 				that they fill in the registration form correctly.​​
 			</p>
 		</div>
+		<hr />
 		<footer class="FOOT1">
 			<img src="logo_footer1.png" />
 			<p>
