--- a/webprogram.html
+++ b/webprogram.html
@@ -51,14 +51,17 @@
 			rel="stylesheet"
 			href="Style.css"
 		/>
-		<title>HOME</title>
+		<link
+			rel="stylesheet"
+			href="design.css"
+		/>
+		<title>Design</title>
 	</head>
-	<body>
+	<body class="body_web">
 		<div class="container">
 			<nav class="Menu-bar">
 				<ul>
 					<li>
-						
 						<a class="b_ef" href="index.html">Home</a>
 					</li>
 					<li>
@@ -76,12 +79,8 @@
 				</ul>
 			</nav>
 		</div>
-		<section>
-			<h1>WELCOME TO MY PAGE</h1>
-			<p>This is my first website welcome guys to see my Page</p>
-		</section>
-		<div class="About">
-			<span><a href="about.html">About us</a></span>
+		<div class="text">
+			<h1>learn Web Pro<span>gram here</span></h1>
 		</div>
 	</body>
 </html>
