--- a/network.html
+++ b/network.html
@@ -49,16 +49,15 @@
 		</style>
 		<link
 			rel="stylesheet"
-			href="Style.css"
+			href="network.css"
 		/>
-		<title>HOME</title>
+		<title>Network</title>
 	</head>
-	<body>
+	<body class="body_network">
 		<div class="container">
 			<nav class="Menu-bar">
 				<ul>
 					<li>
-						
 						<a class="b_ef" href="index.html">Home</a>
 					</li>
 					<li>
@@ -76,12 +75,8 @@
 				</ul>
 			</nav>
 		</div>
-		<section>
-			<h1>WELCOME TO MY PAGE</h1>
-			<p>This is my first website welcome guys to see my Page</p>
-		</section>
-		<div class="About">
-			<span><a href="about.html">About us</a></span>
+        <div class="text">
+			<h1>learn Computer <span>Network here</span></h1>
 		</div>
 	</body>
 </html>
